# SturdyEngine5

./: .clang-format  .clangd  .gitignore  .loreignore  CMakeLists.txt  CMakePresets.json  LICENSE  agent_collaboration.md  compile_flags.txt
.scratch/: all_idents.txt  fix_quoted_includes.py  platform_idents.txt  reorg_src.py  x11_macros.txt
.zed/: build_all.cmake  cmake_runtime.cmake  cmake_runtime.ps1  debug.json  format_cpp.cmake  settings.json  tasks.json  view_as_profile.cmake
Async/: Affinity.cppm  AffinityImpl.cpp  Arc.cppm  Async.cppm  CMakeLists.txt  Chunk.cppm  File.cppm  FileImpl.cpp  IoError.cppm  MainThread.cppm  MainThreadImpl.cpp  Mutex.cppm  Net.cppm  NetImpl.cpp  ParIter.cppm  Ranges.cppm  Runtime.cppm  Scheduler.cppm  SchedulerImpl.cpp  Task.cppm
Async/Include/Async/: Affinity.hpp  Arc.hpp  Async.hpp  Chunk.hpp  File.hpp  IoError.hpp  MainThread.hpp  Mutex.hpp  Net.hpp  ParIter.hpp  Ranges.hpp  Runtime.hpp  Scheduler.hpp
Async/src/: Affinity.hpp  AffinityImpl.cpp  Async.hpp  Chunk.hpp  File.hpp  FileImpl.cpp  MainThreadImpl.cpp  Mutex.hpp  Net.hpp  NetImpl.cpp  ParIter.hpp  Ranges.hpp  Runtime.hpp  Scheduler.hpp  SchedulerImpl.cpp  Task.hpp
Async/tests/: SchedulerTest.cpp
Core/: CMakeLists.txt  Core.cppm  EngineBackend.cppm  EngineBackend.hpp  GraphicsBackendError.cppm  Licenses.cppm  RenderSurface.cppm  RenderSurface.hpp  Renderer.cppm  Renderer.hpp  RendererError.cppm
Ecs/: ArchetypeImpl.cpp  CMakeLists.txt  ComponentImpl.cpp  SystemImpl.cpp
Ecs/Include/Ecs/: Archetype.hpp  Commands.hpp  Component.hpp  Contract.hpp  Entity.hpp  Query.hpp  Resource.hpp  Signature.hpp  System.hpp  World.hpp
Ecs/src/: Archetype.hpp  ArchetypeImpl.cpp  Commands.hpp  Component.hpp  ComponentImpl.cpp  Contract.hpp  Entity.hpp  Event.hpp  Module.hpp  Query.hpp  Resource.hpp  Signature.hpp  System.hpp  SystemImpl.cpp  World.hpp
Ecs/tests/: QueryChunkTest.cpp
EcsSmokeTest/: CMakeLists.txt  main.cpp
Engine/: Application.cpp  Application.hpp  ApplicationImpl.cpp  ApplicationImpl.cppm  ApplicationModule.cppm  CMakeLists.txt  Engine.cpp  Engine.cppm  Engine.hpp  EngineImpl.cpp  EngineImpl.cppm  EngineModule.cppm
Engine/src/Engine/: Application.hpp  ApplicationImpl.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  EcsEvents.hpp  EcsRendering.cpp  EcsRendering.hpp  EcsUi.hpp  Engine.hpp  EngineImpl.cpp  EngineModule.cpp  EngineModule.hpp  GltfImport.cpp  GltfImport.hpp  ImageDecode.cpp  ImageDecode.hpp  RenderGraph.cpp  RenderGraph.hpp  WindowState.hpp
Foundation/: CMakeLists.txt  Concepts.cppm  Concepts.hpp  Constants.cppm  Constants.hpp  Embed.cppm  Embed.hpp  Foundation.cppm  Iter.cppm  Log.cppm  Log.hpp  Math.cppm  Math.hpp  Memory.cpp  Memory.cppm  Memory.hpp  MemoryImpl.cpp  MemoryImpl.cppm  NumericConcepts.cppm  NumericConcepts.hpp  Types.cppm  Types.hpp  UString.cppm  Utils.cppm  Wide.cppm  Wide.hpp  WideTraits.cppm  WideTraits.hpp
Platform/: CMakeLists.txt  Platform.cppm
Platform/Linux/: WindowEffects.cpp  WindowEffectsImpl.cpp  WindowEffectsImpl.cppm
Platform/MacOS/: WindowEffects.cpp  WindowEffectsImpl.cpp  WindowEffectsImpl.cppm
Platform/Web/: WindowEffectsImpl.cpp
Platform/Window/: Window.cppm  Window.hpp  WindowConfig.cppm  WindowEffect.cppm  WindowEffects.cppm  WindowEffects.hpp  WindowError.cppm  WindowEvent.cppm  WindowGeometry.cppm  WindowLog.cppm  WindowLog.hpp  WindowManager.cppm  WindowNative.cppm  WindowNative.hpp
Platform/Window/GLFW/: GLFW.cppm  GLFWImpl.cpp  GLFWImpl.cppm  GLFWWindow.cppm  SE_GLFW.cpp  SE_GLFW.hpp
Platform/Window/SDL3/: SDL3.cppm  SDL3Impl.cpp  SDL3Impl.cppm  SDL3Window.cppm  SE_SDL3.cpp  SE_SDL3.hpp
Platform/Windows/: WindowEffects.cpp  WindowEffectsImpl.cpp  WindowEffectsImpl.cppm
Platform/src/Platform/: Fonts.hpp  Platform.hpp
Platform/src/Platform/Linux/: FontsImpl.cpp  WindowEffectsImpl.cpp
Platform/src/Platform/MacOS/: FontsImpl.cpp  WindowEffectsImpl.cpp
Platform/src/Platform/Web/: FontsImpl.cpp  WindowEffectsImpl.cpp
Platform/src/Platform/Window/: Window.cpp  Window.hpp  WindowConfig.hpp  WindowEffect.hpp  WindowEffects.cpp  WindowEffects.hpp  WindowError.cpp  WindowError.hpp  WindowEvent.hpp  WindowGeometry.hpp  WindowLog.hpp  WindowManager.cpp  WindowManager.hpp  WindowNative.hpp
Platform/src/Platform/Window/GLFW/: GLFW.hpp  GLFWImpl.cpp  Window.hpp
Platform/src/Platform/Window/SDL3/: SDL3.hpp  SDL3Impl.cpp  Window.hpp
Platform/src/Platform/Windows/: FontsImpl.cpp  WindowEffectsImpl.cpp
RHI/: Adapter.cppm  Backend.cppm  Barrier.cppm  Binding.cppm  CMakeLists.txt  Command.cppm  Device.cppm  Error.cppm  Execution.cppm  Extensions.cppm  Features.cppm  Flags.cppm  Handles.cppm  HdrDisplay.cppm  Pipeline.cppm  Queries.cppm  Queues.cppm  RHI.cppm  RayTracing.cppm  Resources.cppm  Selection.cppm  Shader.cppm  Swapchain.cppm  Types.cppm
Renderer/: CMakeLists.txt  Geometry.cppm  Handles.cppm  Material.cppm  Mesh.cppm  MeshPrimitives.cpp  ReflectionBinding.cppm  RenderGraph.cppm  Renderer.cppm  RendererDeferredLighting.cpp  RendererLifecycle.cpp  RendererMaterial.cpp  RendererModule.cppm  RendererPostProcess.cpp  RendererRecovery.cpp  RendererResources.cpp  RendererScene.cpp  RendererTextures.cpp  Resources.cppm  Scene.cppm
Runtime/: CMakeLists.txt  Cli.cppm  CliImpl.cpp  RuntimeClient.cpp  main.cpp
Runtime/Include/Runtime/: RuntimeClient.hpp
Runtime/src/: Cli.hpp  CliImpl.cpp  RuntimeClient.cpp  RuntimeClient.hpp  main.cpp
Shaders/: deferred_lighting.slang  deferred_shadow_lighting.slang  fullscreen_bloom.slang  fullscreen_bloom_composite.slang  fullscreen_tonemap.slang  gbuffer_geometry.slang  geometry_color.slang  (+10 more)
graphicsPlatform/: CMakeLists.txt
graphicsPlatform/Include/graphicsPlatform/: GraphicsPlatform.hpp
graphicsPlatform/Source/: GraphicsPlatform.cpp
graphicsPlatform/Source/FreeBSD/: HdrDisplay.cpp
graphicsPlatform/Source/Linux/: HdrDisplay.cpp
graphicsPlatform/Source/Linux/x86-64/: Arch.cpp
graphicsPlatform/Source/MacOS/: HdrDisplay.cpp
graphicsPlatform/Source/Web/: HdrDisplay.cpp
graphicsPlatform/Source/Windows/: HdrDisplay.cpp
(+319 files in other folders)
